<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Apache License
  ~  *
  ~  * Copyright [2017] Sinyuk
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:fitsSystemWindows="false"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginTop="@dimen/status_bar_height"
        android:orientation="horizontal"
        android:transitionName="@string/transition_toolbar"
        tools:background="#fff">


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/navImageView"
            style="@style/action_button"
            android:contentDescription="@string/name_avatar"
            android:transitionName="@string/transition_toolbar_button_1"
            app:riv_border_width="0dp"
            app:riv_corner_radius="16dp"
            tools:src="@mipmap/ic_launcher_round" />


        <com.sinyuk.fanfou.ui.BetterViewAnimator
            android:id="@+id/actionBarSwitcher"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:animateFirstView="true"
            android:inAnimation="@anim/slide_up_fade_in"
            android:outAnimation="@anim/slide_down_fade_out">

            <RelativeLayout
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/actionBarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/actionBarSubTitle"
                    android:layout_centerHorizontal="true"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/text_14"
                    android:textStyle="bold"
                    android:transitionName="@string/transition_toolbar_title"
                    tools:text="@string/label_home" />

                <TextView
                    android:id="@+id/actionBarSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="2dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:textColor="?android:textColorHint"
                    android:textSize="9sp"
                    tools:ignore="SmallSp"
                    tools:text="加载60条新消息" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/gap_8"
                android:layout_marginTop="@dimen/gap_8"
                android:background="@drawable/search_view_bg"
                android:transitionName="@string/transition_search_view">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@+id/searchHint"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_search" />

                <TextView
                    android:id="@+id/searchHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/hint_search"
                    android:textColor="?android:textColorHint"
                    android:textSize="@dimen/text_14"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

        </com.sinyuk.fanfou.ui.BetterViewAnimator>

        <com.sinyuk.fanfou.ui.BetterViewAnimator
            android:id="@+id/endButtonSwitcher"
            android:layout_width="@dimen/action_bar_height"
            android:layout_height="@dimen/action_bar_height"
            android:inAnimation="@anim/rotate_in"
            android:outAnimation="@anim/rotate_out">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/endButton"
                style="@style/action_button"
                android:contentDescription="@null"
                android:transitionName="@string/transition_toolbar_button_2"
                app:riv_border_width="0dp"
                app:riv_corner_radius="16dp"
                tools:src="@drawable/ic_rice" />


            <TextView
                android:id="@+id/searchBack"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_height"
                android:contentDescription="@string/action_close"
                android:gravity="center"
                android:text="@string/action_cancel"
                android:textColor="?android:colorAccent"
                android:textSize="@dimen/text_14"
                android:transitionName="@string/transition_toolbar_button_2" />

        </com.sinyuk.fanfou.ui.BetterViewAnimator>

    </LinearLayout>


    <com.sinyuk.fanfou.ui.FreezeViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionBar" />

</RelativeLayout>