<resources>
    <string name="app_name">Fanfou</string>
    <string name="label_splash">闪屏</string>
    <string name="label_home">主页</string>
    <string name="label_sign">注册/登入</string>
    <string name="label_sign_in">登入</string>
    <string name="action_close">关闭</string>
    <string name="action_switch">切换</string>
    <string name="label_account">账号</string>
    <string name="action_logout">登出</string>
    <string name="name_new_account">新账号</string>
    <string name="hint_add_new_account_emoji">\@ฅ•ω•ฅ</string>
    <string name="action_add">添加</string>
    <string name="status_fetch_succeed_format">%d条新状态</string>
    <string name="status_fetch_no_new_data">还没有新的状态</string>
    <string name="name_following">正在关注</string>
    <string name="name_follower">关注者</string>
    <string name="format_unique_id">\@%s</string>
    <string name="action_edit_profile">编辑资料</string>
    <string name="action_unfollow">不再关注</string>
    <string name="action_follow">关注</string>
    <string name="action_begin_follow">开始关注</string>
    <string name="no_new_statuses">没有新的状态</string>
    <string name="name_trend">趋势</string>
    <string name="action_show_more">显示更多</string>
    <string name="name_search_history">历史记录</string>
    <string name="hint_swipe_to_delete">删除记录</string>
    <string name="hint_loading">加载中…</string>
    <string name="name_public_timeline">随便看看</string>
    <string name="action_switch_to_refresh">换一批</string>
    <string name="action_cancel">取消</string>
    <string name="name_avatar">头像</string>
    <string name="action_post_fanfou">新状态</string>
    <string name="action_addfriend">添加好友</string>
    <string name="action_settings_inbox">消息管理</string>
    <string name="action_sendmessage">私信</string>
    <string name="hint_search">搜索饭否</string>
    <string name="action_confirm">确定</string>
    <string name="hint_search_suggestion">尝试搜索消息、用户或关键词</string>
    <string name="action_delete">删除</string>
    <string name="label_search_history">搜索历史</string>
    <string name="action_back">返回</string>
    <string name="action_delete_all">删除全部</string>
    <string name="action_clear">清除</string>
    <string name="name_direct_msg">私信</string>
    <string name="label_friend">正在关注</string>
    <string name="label_following">关注者</string>
    <string name="label_search">搜索</string>
    <string name="label_inbox">消息</string>
    <string name="label_direct_msg">私信</string>
    <string name="label_status">状态</string>
    <string name="action_reply">回复</string>
    <string name="action_repost">转发</string>
    <string name="action_like">喜欢</string>
    <string name="action_directmsg">私信</string>
    <string name="hint_repost_and_reply">回复并转发</string>
    <string name="action_post">发送</string>
    <string name="hint_post_fanfou">说点什么呢?</string>
    <string name="action_addpicture">添加图片</string>
    <string name="name_picture">图片</string>
    <string name="action_mention">\@别人</string>
    <string name="name_edit">编辑</string>
    <string name="action_more">更多</string>
    <string name="action_expand">展开</string>
    <string name="name_backdrop">资料背景图</string>
    <string name="name_picture_thumb">缩略图</string>
    <string name="name_profile">我的</string>
    <string name="transition_toolbar_button_1">transition_toolbar_button_1</string>
    <string name="transition_toolbar">transition_toolbar</string>
    <string name="transition_toolbar_title">transition_toolbar_title</string>
    <string name="transition_toolbar_button_2">transition_toolbar_button_2</string>
    <string name="name_draft">草稿</string>
    <string name="name_settings">设置</string>
    <string name="name_help">帮助</string>
    <string name="name_about">关于</string>
    <string name="name_night_mode">夜间模式</string>
    <string name="name_night_mode_on">开启</string>
    <string name="label_account_manage">账号管理</string>
    <string name="action_done">完成</string>
    <string name="hint_confirm_delete_account">确认删除？</string>
    <string name="action_yes">是的</string>
    <string name="name_register">注册新账号</string>
    <string name="hint_add_new_account">新の账号</string>
    <string name="hint_switch_account_ing">切换账户中…</string>
    <string name="hint_need_sign_in_again">需要重新登录</string>
    <string name="hint_switch_account_before_delete">请先点击完成切换当前账号</string>
    <string name="hint_no_more_home">我是有底线的人</string>
    <string name="hint_no_more_context" />
    <string name="hint_no_more_user"></string>
    <string name="hint_new_statuses_coming">有新的状态</string>
    <string name="format_new_statuses_coming">%d条新状态</string>
    <string name="name_divider">昏哥线</string>
    <string name="name_blurry">糊糊</string>
    <string name="action_retry">重试</string>
    <string name="image_401">image_401</string>
    <string name="state_title_401">No Visitors!</string>
    <string name="state_description_401">Sorry,you\'re not authorized,either it\'s invalid.</string>
    <string name="state_title_empty">Sorry,here was all but empty.</string>
    <string name="state_description_empty">But don\'t feel empty inside.</string>
    <string name="state_title_nofriends">Seemingly you had no relatives here.</string>
    <string name="state_description_nofriends">It feels good to open up with others.</string>
    <string name="state_title_privacy">Not for your eyes</string>
    <string name="state_description_privacy">Just one way to guard privacy</string>
    <string name="image_empty">image_empty</string>
    <string name="label_avatar">avatar</string>
    <string name="hint_liked">已收藏</string>
    <string name="hint_reposted">已转发</string>

</resources>
